Documentation of methods

--- a/client/html/index.html
+++ b/client/html/index.html
@@ -51,16 +51,22 @@
 			<hr />
 
 			<section class="main-content">
+				<!-- Containers for different type of news -->
+
+				<!-- News -->
 				<main class="news hidden">
 					<h2 class="story-type-header"></h2>
 
 					<div class="news-histories"></div>
 				</main>
+
+				<!-- Jailtime -->
 				<main class="jalitime hidden">
 					<h2>Latest gossip</h2>
 
 					<div class="news-histories"></div>
 				</main>
+				
 				<aside class="ad">
 					<h2>Ads</h2>
 					<p>
